# aiida-sdb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.json  setup.py
.github/workflows/: ci.yml
aiida_sdb/: __init__.py
aiida_sdb/cli/: __init__.py  main.py
aiida_sdb/cli/analyse/: __init__.py  cif_clean.py
aiida_sdb/cli/data/: __init__.py  structure.py
aiida_sdb/cli/launch/: __init__.py  cif_clean.py  cif_import.py  cif_unique.py
aiida_sdb/cli/run/: __init__.py  select.py  uniq.py
